--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "1. Start the GPS daemon: `sudo gpsd /dev/ttyUSB0 -F /var/run/gpsd.sock`\r 1. Test GPS fix: `cgps -s`",
   "main": "app.js",
   "dependencies": {
+    "aws-iot-device-sdk": "^2.2.0",
     "node-gpsd": "^0.3.0"
   },
   "devDependencies": {},
