--- a/config.js.example
+++ b/config.js.example
@@ -3,6 +3,7 @@ module.exports = {
     region: 'us-west-2'
   },
   iot: {
+  	interval: 15,
     keyPath: './certs/xxx.private.key',
     certPath: './certs/xxx.cert.pem',
     caPath: './certs/root-CA.crt',
