--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "dependencies": {
     "aws-iot-device-sdk": "^2.2.0",
     "aws-sdk": "^2.179.0",
+    "express": "^4.16.3",
     "node-gpsd": "^0.3.0",
     "winston": "^3.0.0-rc1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^4.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
