--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "aws-sdk": "^2.179.0",
     "express": "^4.16.3",
     "node-gpsd": "^0.3.0",
+    "uuid": "^3.2.1",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
