--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-iot-device-sdk": "^2.2.1",
     "aws-sdk": "^2.299.0",
     "express": "^4.16.3",
+    "mqtt": "^2.18.8",
     "node-gpsd": "^0.3.0",
     "uuid": "^3.2.1",
     "winston": "^3.0.0-rc1"
