--- a/config.js.example
+++ b/config.js.example
@@ -14,6 +14,6 @@ module.exports = {
     }
   },
   mqtt: {
-    connectionString: 'mqtt:/localhost:1883'
+    connectionString: 'mqtt://localhost:1883'
   }
 };
